# ai_counselor

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  ai-counselor.service  docker-compose.yml  push_online.sh  pyproject.toml  pytest.ini  requirements.txt  run_interactive_test.py  test_doubao.py  test_llm.py  test_models_config.py
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: pytest.ini
backend/analytics/: admin.py  apps.py  queries.py  queries_roundtable.py  views.py  views_roundtable.py
backend/chat/: __init__.py  apps.py  urls.py  (+1 more)
docs/: PRD_Roundtable.md  TECH_DESIGN_Roundtable.md
tests/: test_agents.py  test_api.py  test_auth_signup.py  test_discussion_backend.py  test_discussion_interactive.py  test_moodpal_awareness_hints.py  test_moodpal_cbt_executor.py  test_moodpal_cbt_regression_suite.py  test_moodpal_cbt_runtime.py  test_moodpal_context_summary.py  test_moodpal_eval_import.py  test_moodpal_eval_patient_agent.py  test_moodpal_eval_scoring.py  test_moodpal_eval_target_driver.py  test_moodpal_eval_views.py  test_moodpal_humanistic_executor.py  test_moodpal_humanistic_regression_suite.py  test_moodpal_humanistic_runtime.py  test_moodpal_model_options.py  test_moodpal_persona_specs.py  test_moodpal_psychoanalysis_executor.py  test_moodpal_psychoanalysis_regression_suite.py  test_moodpal_psychoanalysis_router.py  test_moodpal_psychoanalysis_runtime.py  test_moodpal_runtime_completion_service.py  test_moodpal_session.py  test_moodpal_spirit_companion_runtime.py  test_suggestions_fallback.py  test_token_quota.py  test_visibility.py
(+348 files in other folders)
